# PyWeb_HW14tests

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 6a0b1db1a310_init.py  c848befef7f6_init.py  ce8f237f9769_init.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test_route_auth.py  test_unit_repository_contacts.py
