[tool.poetry]
name = "fastapi14"
version = "0.1.0"
description = ""
authors = ["Yurii Protsenko <elsoul@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
requests = "^2.31.0"
sqlalchemy = "^2.0.27"
psycopg2 = "^2.9.9"
python-multipart = "^0.0.9"
pydantic = {extras = ["email"], version = "^2.6.2"}
alembic = "^1.13.1"
sqlalchemy-utils = "^0.41.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi-jwt-auth = "^0.5.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
libgravatar = "^1.0.4"
fastapi-mail = "^1.4.1"
redis = "^5.0.2"
python-dotenv = "^1.0.1"
fastapi-limiter = "^0.1.6"
pydantic-settings = "^2.2.1"
cloudinary = "^1.39.0"
pytest = "^8.1.1"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]